make pages of about and listing and contact

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!--============== Header Section Start ==============-->
-<header class="transparent-header nav-on-banner fixed-bg-dark">
+<header *ngIf="isHome" class="transparent-header nav-on-banner fixed-bg-dark">
         <div class="main-nav py-2 xs-p-0">
                 <div class="container">
                         <div class="row">
@@ -19,16 +19,16 @@
                                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                                         <ul class="navbar-nav ms-auto">
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link">Home</a>
+                                                                        <a class="nav-link" routerLink="/">Home</a>
                                                                 </li>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link">About Us</a>
+                                                                        <a class="nav-link" routerLink="/about">About Us</a>
                                                                 </li>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link">Listing</a>
+                                                                        <a class="nav-link" routerLink="/listing">Listing</a>
                                                                 </li>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link">Contact Us</a>
+                                                                        <a class="nav-link" routerLink="/contact">Contact Us</a>
                                                                 </li>
                                                         </ul>
                                                 </div>
@@ -36,6 +36,42 @@
                                 </div>
                         </div>
                 </div>
+        </div>
+</header>
+<!--============== Header Section End ==============-->
+
+
+<!--============== Header Section Start ==============-->
+<header *ngIf="!isHome" class="header-style nav-on-top bg-white">
+        <div class="main-nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active">
+                            <a class="navbar-brand" href="#"><img class="nav-logo" src="assets/assets/images/logo/logo1.png" alt="Image not found !"></a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon flaticon-menu flat-small text-primary"></span>
+                              </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ms-auto">
+                                        <li class="nav-item">
+                                                <a class="nav-link" routerLink="/">Home</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" routerLink="/about">About Us</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" routerLink="/listing">Listing</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" routerLink="/contact">Contact Us</a>
+                                        </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+            </div>
         </div>
 </header>
 <!--============== Header Section End ==============-->
