--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 
 <div id="page_wrapper">
   <app-header></app-header>
-  <app-home></app-home>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
