--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -294,7 +294,7 @@
             <img src="assets/assets/images/location/3.png" alt="image not found">
           </div>
           <div class="mt-3">
-            <h5 class="transation font-400"><a href="#">Miami</a></h5>
+            <h5 class="transation font-400"><a href="#">AJMER</a></h5>
             <p>82 Properties</p>
           </div>
         </div>
@@ -305,7 +305,7 @@
             <img src="assets/assets/images/location/1.png" alt="image not found">
           </div>
           <div class="mt-3">
-            <h5 class="transation font-400"><a href="#">Los Angeles</a></h5>
+            <h5 class="transation font-400"><a href="#">JAIPUR</a></h5>
             <p>57 Properties</p>
           </div>
         </div>
@@ -316,7 +316,7 @@
             <img src="assets/assets/images/location/2.png" alt="image not found">
           </div>
           <div class="mt-3">
-            <h5 class="transation font-400"><a href="#">Rome</a></h5>
+            <h5 class="transation font-400"><a href="#">KOTA</a></h5>
             <p>170 Properties</p>
           </div>
         </div>
@@ -327,7 +327,7 @@
             <img src="assets/assets/images/location/4.png" alt="image not found">
           </div>
           <div class="mt-3">
-            <h5 class="transation font-400"><a href="#">Paris</a></h5>
+            <h5 class="transation font-400"><a href="#">PANVEL,(MUMBAI)</a></h5>
             <p>17 Properties</p>
           </div>
         </div>
@@ -338,7 +338,7 @@
             <img src="assets/assets/images/location/5.png" alt="image not found">
           </div>
           <div class="mt-3">
-            <h5 class="transation font-400"><a href="#">Florida</a></h5>
+            <h5 class="transation font-400"><a href="#">INDORE</a></h5>
             <p>27 Properties</p>
           </div>
         </div>
@@ -353,16 +353,16 @@
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-6">
-        <h2 class="main-title">Featured Properties</h2>
+        <h2 class="main-title">Featured Projects</h2>
       </div>
       <div class="col-md-6">
         <div class="mix-tab">
           <ul class="nav-tab-border-active ms-auto d-table">
-            <li data-filter="all">All</li>
-            <li data-filter=".house">House</li>
-            <li data-filter=".office">Office</li>
-            <li data-filter=".appartment">Appartment</li>
-            <li data-filter=".land">Land</li>
+            <li (click)="categoryValue('all')" data-filter="all" value="all">All</li>
+            <li (click)="categoryValue('Residential')" data-filter=".house" value="Residential">Residential</li>
+            <li (click)="categoryValue('Commercial')" data-filter=".office" value="Commercial">Commercial</li>
+            <li (click)="categoryValue('Industrial')" data-filter=".appartment" value="Industrial">Industrial</li>
+            <li (click)="categoryValue('Villa')" data-filter=".land" value="Villa">Villa</li>
           </ul>
         </div>
       </div>
@@ -912,3 +912,4 @@
   </div>
 </div>
 <!--============== Modal End ==============-->
+<app-loader *ngIf="loader"></app-loader>
